--- a/site/docs/tbdex/wallet/managing-credentials.mdx
+++ b/site/docs/tbdex/wallet/managing-credentials.mdx
@@ -2,17 +2,26 @@
 sidebar_position: 6
 ---
 
+<LanguageSwitcher languages="JavaScript, Kotlin" />
+
+import findMatchingOfferingsKt from '!!raw-loader!@site/snippets/testsuite-kotlin/src/test/kotlin/docs/tbdex/wallet/findMatchingOfferingsKt.snippet.kt';
+import findMatchingOfferingsJS from '!!raw-loader!@site/snippets/testsuite-javascript/__tests__/tbdex/wallet/findMatchingOfferingsJS.snippet.js';
+
+import getSelectedCredentialsKt from '!!raw-loader!@site/snippets/testsuite-kotlin/src/test/kotlin/docs/tbdex/wallet/getSelectedCredentialsKt.snippet.kt';
+import getSelectedCredentialsJS from '!!raw-loader!@site/snippets/testsuite-javascript/__tests__/tbdex/wallet/getSelectedCredentialsJS.snippet.js';
+
 # Managing Credentials
 
 Within a tbDEX network, [Verifiable Credentials (VC)](/docs/web5/learn/verifiable-credentials) play a critical role in establishing trust and ensuring regulatory compliance during transactions.
 
-VCs are digital proofs that may be required by PFIs in order to verify your customers. 
+VCs are digital proofs that may be required by PFIs in order to verify your customers.
 So, your application will serve as an agent who presents a customer's credentials to a PFI as part of the transaction flow.
 
 ## Storing Credentials
+
 As part of a customer's profile, your application can choose to store credentials that have been issued to them.
 
-Signed VCs are converted into a JSON Web Token ([JWT](https://jwt.io/)), which is a compact, URL-safe means of representing claims to be transferred between two parties. 
+Signed VCs are converted into a JSON Web Token ([JWT](https://jwt.io/)), which is a compact, URL-safe means of representing claims to be transferred between two parties.
 JWT format is used to encode the credentials, making them both secure and easily transmissible.
 
 Storing your customers' credentials in this format is sufficient for use on a tbDEX network.
@@ -23,9 +32,18 @@ PFI Offerings contain a `requiredClaims` section that provides a definition of t
 
 You can obtain the `requiredClaims` from an Offering via:
 
-```js
-const presentationDefinition = offering.data.requiredClaims;
-```
+<Shnip
+  inlineSnippets={[
+    {
+      code: `const presentationDefinition = offering.data.requiredClaims;`,
+      language: 'JavaScript',
+    },
+    {
+      code: `val presentationDefinition = offering.data.requiredClaims`,
+      language: 'Kotlin',
+    },
+  ]}
+/>
 
 In the following example of a `requiredClaims` section of an Offering, the PFI has specified that the customer must provide a VC of type **SanctionsCredential**:
 
@@ -54,57 +72,26 @@ In the following example of a `requiredClaims` section of an Offering, the PFI h
 }
 ```
 
-
 ## Obtain Eligible Offerings
 
 With a network of multiple PFIs, there will likely be several Offerings that match your customer's desired currency pairing.
 You can narrow these options down even further by filtering for the ones where the customer's existing VCs satisfy the Offering's requirements:
 
-```js
-//Your network of PFIs
-const pfiDids = ['pfiDid1', 'pfiDid2', /* more PFI DIDs here */];
-
-const payinCurrencyCode = 'USDC'; // Desired payin currency code
-const payoutCurrencyCode = 'KES'; // Desired payout currency code
-
-// Customer's signed credentials in JWT format
-const credentials = [vc_jwt_residence, vc_jwt_sanctions];
-
-// Array to store the matched offerings
-const matchedOfferings = [];
-
-for (const pfiDid of pfiDids) {
-  const { data: offerings } = await TbdexHttpClient.getOfferings({ pfiDid: pfiDid });
-
-  for (const offering of offerings) {
-
-    // Filter offerings based on the desired currency pair
-    if (offering.data.payinCurrency.currencyCode === payinCurrencyCode &&
-        offering.data.payoutCurrency.currencyCode === payoutCurrencyCode) {
-
-      // Extract the presentation definition from the offering
-      const presentationDefinition = offering.data.requiredClaims;
-
-      try {
-        // Validate customer's VCs against the offering's presentation definition
-        PresentationExchange.satisfiesPresentationDefinition({ 
-            vcJwts: credentials, 
-            presentationDefinition: presentationDefinition 
-        });
-        
-        // Add offerings that match the customer's needs and qualifications
-        matchedOfferings.push(offering);
-
-      } catch (e) {
-        // Offerings where the customer's VCs do not meet the requirements are skipped
-      }
-    }
-  }
-}
-```
+<Shnip
+  snippets={[
+    {
+      snippetContent: findMatchingOfferingsKt,
+      language: 'Kotlin',
+    },
+    {
+      snippetContent: findMatchingOfferingsJS,
+      language: 'JavaScript',
+    },
+  ]}
+/>
 
 Here, we skip offerings where the customer's VCs do not satisfy the Offering's requirements.
-However, your application may choose to include these in the matched Offerings and still present them to the customer, indicating that they'd need to obtain the necessary credentials to satisfy the Offering's requirements. 
+However, your application may choose to include these in the matched Offerings and still present them to the customer, indicating that they'd need to obtain the necessary credentials to satisfy the Offering's requirements.
 
 Your application could even apply for certain credentials on behalf of the customer, or [issue credentials](/docs/web5/build/verifiable-credentials/vc-issuance) that you have the credibility to do so.
 
@@ -117,12 +104,17 @@ However, you'll only want to select the ones that are actually required.
 
 To do so, pass the customer's credentials and the `requiredClaims` section of the Offering to `selectCredentials()`:
 
-```js
-// Select the credentials to be used for the exchange
-const selectedCredentials = PresentationExchange.selectCredentials({
-    vcJwts: credentials,
-    presentationDefinition: selectedOffering.data.requiredClaims
-});
-```
+<Shnip
+  snippets={[
+    {
+      snippetContent: getSelectedCredentialsKt,
+      language: 'Kotlin',
+    },
+    {
+      snippetContent: getSelectedCredentialsJS,
+      language: 'JavaScript',
+    },
+  ]}
+/>
 
 The `selectedCredentials` will be a part of the [RFQ](/docs/tbdex/wallet/send-rfq) that you create on behalf of your customer.
