added info on replyTo

--- a/site/docs/tbdex/pfi/processing-orders.mdx
+++ b/site/docs/tbdex/pfi/processing-orders.mdx
@@ -54,4 +54,4 @@ When the `Order` has reached a terminal state (e.g. order fulfilled, order rejec
     { snippetContent: pfiCloseOrderKt, language: 'Kotlin'}
   ]} />
 
-After writing the `Close` message to your database, the Wallet will be able to know that their transaction has closed via polling.
+After writing the `Close` message to your database, the Wallet will be able to know that their transaction has closed via polling or callback.
