add lang switchers

--- a/site/docs/tbdex/pfi/required-sdks.mdx
+++ b/site/docs/tbdex/pfi/required-sdks.mdx
@@ -13,6 +13,8 @@ import importJs from '!!raw-loader!@site/snippets/testsuite-javascript/__tests__
 
 # Required SDKs
 
+<LanguageSwitcher languages="JavaScript, Kotlin" />
+
 To implement and operate as a PFI, you’ll need to use the following SDKs:
 
 * **web5/dids** - To work with [Decentralized Identifiers (DID)](/docs/web5/learn/decentralized-identifiers), including creating an identity, and performing any other required cryptographic functions, you’ll need this package. Check out [Key Management Service](/docs/web5/build/decentralized-identifiers/key-management) for DIDs in production environments.
