--- a/site/docs/tbdex/wallet/required-sdks.mdx
+++ b/site/docs/tbdex/wallet/required-sdks.mdx
@@ -14,6 +14,8 @@ import importJs from '!!raw-loader!@site/snippets/testsuite-javascript/__tests__
 
 # Required SDKs
 
+<LanguageSwitcher languages="JavaScript, Kotlin" />
+
 To implement and operate as a Wallet on a tbDEX network, you’ll need to use the following SDKs:
 
 
