added link for Offerings

--- a/site/docs/tbdex/wallet/send-rfq.mdx
+++ b/site/docs/tbdex/wallet/send-rfq.mdx
@@ -19,7 +19,7 @@ import sendRfqMessageKt from '!!raw-loader!@site/snippets/testsuite-kotlin/src/t
 
 # Sending RFQs
 
-After your customer selects an Offering, the next step is to send a **Request for Quote (RFQ)** to the PFI in order to initiate the transaction.
+After your customer selects an [Offering](/docs/tbdex/pfi/creating-offerings), the next step is to send a **Request for Quote (RFQ)** to the PFI in order to initiate the transaction.
 The Offering provided an estimate, but the Quote will provide a formal offer based on the financial transaction the customer is requesting as well as the payment methods provided.
 
 ## Create the RFQ
