--- a/site/docs/tbdex/wallet/send-rfq.mdx
+++ b/site/docs/tbdex/wallet/send-rfq.mdx
@@ -1,108 +1,96 @@
 ---
+title: Sending RFQs
+hide_title: true
 sidebar_position: 7
 ---
 
+import skeletonRfqMessageJS from '!!raw-loader!@site/snippets/testsuite-javascript/__tests__/tbdex/wallet/skeletonRfqMessageJS.snippet.js'
+import rfqMetadataJS from '!!raw-loader!@site/snippets/testsuite-javascript/__tests__/tbdex/wallet/rfqMetadataJS.snippet.js'
+import createRfqMessageJS from '!!raw-loader!@site/snippets/testsuite-javascript/__tests__/tbdex/wallet/createRfqMessageJS.snippet.js'
+import signRfqMessageJS from '!!raw-loader!@site/snippets/testsuite-javascript/__tests__/tbdex/wallet/signRfqMessageJS.snippet.js'
+import sendRfqMessageJS from '!!raw-loader!@site/snippets/testsuite-javascript/__tests__/tbdex/wallet/sendRfqMessageJS.snippet.js'
+import skeletonRfqMessageKt from '!!raw-loader!@site/snippets/testsuite-kotlin/src/test/kotlin/docs/tbdex/wallet/skeletonRfqMessageKt.snippet.kt'
+import rfqMetadataKt from '!!raw-loader!@site/snippets/testsuite-kotlin/src/test/kotlin/docs/tbdex/wallet/rfqMetadataKt.snippet.kt'
+import createRfqMessageKt from '!!raw-loader!@site/snippets/testsuite-kotlin/src/test/kotlin/docs/tbdex/wallet/createRfqMessageKt.snippet.kt'
+import signRfqMessageKt from '!!raw-loader!@site/snippets/testsuite-kotlin/src/test/kotlin/docs/tbdex/wallet/signRfqMessageKt.snippet.kt'
+import sendRfqMessageKt from '!!raw-loader!@site/snippets/testsuite-kotlin/src/test/kotlin/docs/tbdex/wallet/sendRfqMessageKt.snippet.kt'
+
+<LanguageSwitcher languages="JavaScript, Kotlin" />
+
 # Sending RFQs
 
-After your customer selects an Offering, the next step is to send a **Request for Quote (RFQ)** to the PFI in order to initiate the transaction.
+After your customer selects an [Offering](/docs/tbdex/pfi/creating-offerings), the next step is to send a **Request for Quote (RFQ)** to the PFI in order to initiate the transaction.
 The Offering provided an estimate, but the Quote will provide a formal offer based on the financial transaction the customer is requesting as well as the payment methods provided.
 
 ## Create the RFQ
 An RFQ is a structured tbDEX message that specifies the details of the transaction your customer wishes to make.
 It includes information about the Offering, payment methods, and any required [verifiable credentials (VCs)](/docs/tbdex/wallet/managing-credentials).
 
-To create the message, call `Rfq.create()` passing `metadata` and `data`:
+To create the message, call `Rfq.create()` passing metadata and data:
 
-```js
-const rfq = Rfq.create({
-  metadata: {},
-  data: {},
-});
-```
+<Shnip
+  snippets={[
+    { snippetContent: skeletonRfqMessageJS, language: 'JavaScript' },
+    { snippetContent: skeletonRfqMessageKt, language: 'Kotlin' },
+  ]}
+/>
 
 ### metadata
-`metadata` identifies the DIDs of the sender (your customer) and the recipient (the PFI):
+The metadata properties identify the DIDs of the sender (your customer) and the recipient (the PFI):
 
-```js
-const rfq = Rfq.create({
-  //highlight-start
-  metadata: {
-    from: customer.did, // Customer DID
-    to: selectedOffering.metadata.from    // PFI's DID
-  },
-  //highlight-end
-  data: {}
-});
-```
+<Shnip
+  snippets={[
+    { snippetContent: rfqMetadataJS, language: 'JavaScript' },
+    { snippetContent: rfqMetadataKt, language: 'Kotlin' },
+  ]}
+/>
 
 ### data
-`data` contains the specifics of the transaction, such as the id of the Offering you're requesting the Quote for, payment methods, and credentials:
+The data properties contain the specifics of the transaction, such as the id of the Offering you're requesting the Quote for, payment methods, and credentials:
 
 * **offeringId** - The unique identifier of the PFI's Offering the customer is interested in
-* **payinSubunits** - Total amount of payin currency the customer wants to pay in exchange for payout currency
+* **payinAmount** - Total amount of payin currency the customer wants to pay in exchange for payout currency
 * **payinMethod** - How the customer intends to pay, including the currency and amount. This includes a `paymentDetails` object which should contain the properties defined in the Offering's `requiredPaymentDetails` JSON schema
 * **payoutMethod** - How the customer wishes to receive the payout. This includes a `paymentDetails` object which should contain the properties defined in the Offering's `requiredPaymentDetails` JSON schema
 * **claims** - The [VCs that satisfy the requirements of the Offer](/docs/tbdex/wallet/managing-credentials#select-credentials-that-satisfy-requirements)
 
-```js
-const rfq = Rfq.create({
-  metadata: {
-    from: customer.did, // Customer DID
-    to: selectedOffering.metadata.from    // PFI's DID
-  },
-  //highlight-start
-  data: {
-    offeringId: selectedOffering.metadata.id,   // The ID of the selected offering
-    payinSubunits: '0.012',  // The amount of the payin currency
-    payinMethod: {
-      kind: 'BTC_WALLET_ADDRESS',   // The method of payment
-      paymentDetails: {
-        btcAddress: BTC_ADDRESS       // Customer's BTC wallet address
-      }
-    },
-    payoutMethod: {
-      kind: 'DEBIT_CARD',  // The method for receiving payout
-      paymentDetails: {
-        cvv: '123',
-        cardNumber: '1234567890123456789',
-        expiryDate: '05/25',
-        cardHolderName: 'Alice Doe'
-      }
-    },
-    claims: selectedCredentials     // Array of signed VCs required by the PFI
-  }
-  //highlight-end
-});
-```
+<Shnip
+  snippets={[
+    { snippetContent: createRfqMessageJS, language: 'JavaScript' },
+    { snippetContent: createRfqMessageKt, language: 'Kotlin' },
+  ]}
+/>
 
 
 ## Sign the RFQ
 Signing the RFQ ensures its authenticity. You can do so with the customer's [Portable DID](/docs/web5/build/decentralized-identifiers/how-to-create-did#portable-did):
 
-```js
-await rfq.sign(customer); // Customer's PortableDid
-```
+<Shnip
+  snippets={[
+    { snippetContent: signRfqMessageJS, language: 'JavaScript' },
+    { snippetContent: signRfqMessageKt, language: 'Kotlin' },
+  ]}
+/>
+
 
 ## Send RFQ to PFI
-Use `TbdexHttpClient` to send the RFQ to the PFI. With an optional `replyTo` property containing a valid URI where new messages from the PFI will be sent:
+Use `TbdexHttpClient` to send the RFQ to the PFI, with an optional `replyTo` property containing a valid URI where new messages from the PFI will be sent:
 
-```js
-const rfqResponse = await TbdexHttpClient.sendMessage({
-    message: rfq,
-    replyTo: 'https://tbdex.io/callback'
-});
-```
+<Shnip
+  snippets={[
+    { snippetContent: sendRfqMessageJS, language: 'JavaScript' },
+    { snippetContent: sendRfqMessageKt, language: 'Kotlin' },
+  ]}
+/>
 
-The response contains a `status`, where success would be `202`:
+:::tip
+If `replyTo` is provided, the PFI will send all new messages of the exchange to the supplied URI. 
+This URI is scoped to each exchange, allowing you to specify a different URI per exchange if desired. 
 
-```js
-{
-  "status": 202,
-  "headers": {}
-}
-```
+If `replyTo` is _not_ present, you will have to poll the PFI to receive new messages within the exchange.
+:::
 
-At this point, the RFQ has been successfully sent to the PFI and an **exchange** has been created.
+If no error is thrown, the RFQ has been successfully sent to the PFI and an **exchange** has been created.
 This exchange serves as a thread of messages between your application and the PFI regarding this transaction.
 
 The next message written to the exchange will be a [Quote](/docs/tbdex/wallet/receive-quote) from the PFI.
