addressing PR comments

--- a/site/docs/tbdex/wallet/managing-credentials.mdx
+++ b/site/docs/tbdex/wallet/managing-credentials.mdx
@@ -1,11 +1,16 @@
 ---
+title: Managing Credentials
+hide_title: true
 sidebar_position: 6
 ---
 
 <LanguageSwitcher languages="JavaScript, Kotlin" />
 
-import findMatchingOfferingsKt from '!!raw-loader!@site/snippets/testsuite-kotlin/src/test/kotlin/docs/tbdex/wallet/findMatchingOfferingsKt.snippet.kt';
-import findMatchingOfferingsJS from '!!raw-loader!@site/snippets/testsuite-javascript/__tests__/tbdex/wallet/findMatchingOfferingsJS.snippet.js';
+import findMatchingOfferingsWithCredentialValidationKt from '!!raw-loader!@site/snippets/testsuite-kotlin/src/test/kotlin/docs/tbdex/wallet/findMatchingOfferingsWithCredentialValidationKt.snippet.kt';
+import findMatchingOfferingsWithCredentialValidationJS from '!!raw-loader!@site/snippets/testsuite-javascript/__tests__/tbdex/wallet/findMatchingOfferingsWithCredentialValidationJS.snippet.js';
+
+import retrievePresentationDefinitionFromOfferingsRequiredClaimsJS from '!!raw-loader!@site/snippets/testsuite-javascript/__tests__/tbdex/wallet/retrievePresentationDefinitionFromOfferingsRequiredClaimsJS.snippet.js';
+import retrievePresentationDefinitionFromOfferingsRequiredClaimsKt from '!!raw-loader!@site/snippets/testsuite-kotlin/src/test/kotlin/docs/tbdex/wallet/retrievePresentationDefinitionFromOfferingsRequiredClaimsKt.snippet.kt';
 
 import getSelectedCredentialsKt from '!!raw-loader!@site/snippets/testsuite-kotlin/src/test/kotlin/docs/tbdex/wallet/getSelectedCredentialsKt.snippet.kt';
 import getSelectedCredentialsJS from '!!raw-loader!@site/snippets/testsuite-javascript/__tests__/tbdex/wallet/getSelectedCredentialsJS.snippet.js';
@@ -33,14 +38,16 @@ PFI Offerings contain a `requiredClaims` section that provides a definition of t
 You can obtain the `requiredClaims` from an Offering via:
 
 <Shnip
-  inlineSnippets={[
+  snippets={[
     {
-      code: `const presentationDefinition = offering.data.requiredClaims;`,
-      language: 'JavaScript',
+      snippetContent:
+        retrievePresentationDefinitionFromOfferingsRequiredClaimsKt,
+      language: 'Kotlin',
     },
     {
-      code: `val presentationDefinition = offering.data.requiredClaims`,
-      language: 'Kotlin',
+      snippetContent:
+        retrievePresentationDefinitionFromOfferingsRequiredClaimsJS,
+      language: 'JavaScript',
     },
   ]}
 />
@@ -80,11 +87,11 @@ You can narrow these options down even further by filtering for the ones where t
 <Shnip
   snippets={[
     {
-      snippetContent: findMatchingOfferingsKt,
+      snippetContent: findMatchingOfferingsWithCredentialValidationKt,
       language: 'Kotlin',
     },
     {
-      snippetContent: findMatchingOfferingsJS,
+      snippetContent: findMatchingOfferingsWithCredentialValidationJS,
       language: 'JavaScript',
     },
   ]}
