--- a/site/docs/tbdex/wallet/required-sdks.mdx
+++ b/site/docs/tbdex/wallet/required-sdks.mdx
@@ -33,20 +33,16 @@ To implement and operate as a Wallet on a tbDEX network, you’ll need to use th
     { snippetContent: walletSdkInstallJs, language: 'JavaScript', codeLanguage: 'bash'},
     {
       language: 'Kotlin',
-      nestedSnippets: [
-        {
+      nestedSnippets:{
           'Gradle': {
             "snippet": walletSdkInstallGradle,
             "language": 'js'
-          }
-        },
-        {
+          },
           'Maven': {
             "snippet": walletSdkInstallPom,
             "language": 'xml'
           }
         }
-      ]
     }
   ]
 } />
