--- a/site/docs/tbdex/pfi/required-sdks.mdx
+++ b/site/docs/tbdex/pfi/required-sdks.mdx
@@ -1,7 +1,7 @@
 ---
 sidebar_position: 2
 title: Required SDKs
-hide-title: true
+hide_title: true
 ---
 
 import pfiSdkInstallJs from '!!raw-loader!@site/snippets/testsuite-javascript/__tests__/tbdex/pfi/pfiSdkInstallJs.snippet.bash'
@@ -23,28 +23,22 @@ To implement and operate as a PFI, you’ll need to use the following SDKs:
 
 ## Install SDKs
 
-<Shnip snippets={
-  [
-    { snippetContent: pfiSdkInstallJs, language: 'JavaScript', codeLanguage: 'bash'},
-    {
-      language: 'Kotlin',
-      nestedSnippets: [
-        {
-          'Gradle': {
-            "snippet": pfiSdkInstallGradle,
-            "language": 'js'
-          }
-        },
-        {
-          'Maven': {
-            "snippet": pfiSdkInstallPom,
-            "language": 'xml'
-          }
-        }
-      ]
+<Shnip snippets={[
+  { snippetContent: pfiSdkInstallJs, language: 'JavaScript', codeLanguage: 'bash'},
+  {
+    language: 'Kotlin',
+    nestedSnippets: {
+      'Gradle': {
+        "snippet": pfiSdkInstallGradle,
+        "language": 'js'
+      },
+      'Maven': {
+        "snippet": pfiSdkInstallPom,
+        "language": 'xml'
+      }
     }
-  ]
-} />
+  }
+]} />
 
 ## Import Classes
 
