fix typos in tbdex docs

--- a/site/docs/tbdex/pfi/creating-quotes.mdx
+++ b/site/docs/tbdex/pfi/creating-quotes.mdx
@@ -71,6 +71,6 @@ With the `Quote` created, you’ll then sign it for authorization purposes and w
   ]} />
 
 :::note
-Wallet Applicationss are not addressable, and therefore are not pushed updates about Quotes. 
+Wallet Applications are not addressable, and therefore are not pushed updates about Quotes. 
 Therefore the Wallet Application will need to poll the PFI to get the Quote.
 :::
