--- a/site/docs/tbdex/pfi/onboarding.mdx
+++ b/site/docs/tbdex/pfi/onboarding.mdx
@@ -1,14 +1,16 @@
 ---
 sidebar_position: 3
+title: Onboarding
+hide_title: true
 ---
 
 import pfiOnboardingCreateDidJs from '!!raw-loader!@site/snippets/testsuite-javascript/__tests__/tbdex/pfi/pfiOnboardingCreateDidJs.snippet.js';
 import pfiOnboardingCreateDidKt from '!!raw-loader!@site/snippets/testsuite-kotlin/src/test/kotlin/docs/tbdex/pfi/pfiOnboardingCreateDidKt.snippet.kt';
 import pfiOnboardingImportsKt from '!!raw-loader!@site/snippets/testsuite-kotlin/src/test/kotlin/docs/tbdex/pfi/pfiOnboardingImportsKt.snippet.kt';
 
-# Onboarding
-
 <LanguageSwitcher languages="JavaScript, Kotlin" />
+
+# Onboarding
 
 Before beginning development of your PFI’s code, you’ll need to create an identity to use on the network. A tbDEX network is built to be decentralized, which is why you’ll need to create your own [Decentralized Identifier](/docs/web5/learn/decentralized-identifiers) (DID) to assign to the PFI. That DID will represent the PFI, as well as serve as the signer for tbDEX messages and resources that are sent to other parties.
 
