--- a/site/docs/web5/troubleshooting/common-errors.mdx
+++ b/site/docs/web5/troubleshooting/common-errors.mdx
@@ -3,6 +3,7 @@ sidebar_position: 1
 ---
 
 # Common Errors
+If the suggested steps here don't work, please [open an issue](https://github.com/TBD54566975/developer.tbd.website/issues) or post your questions in the `#web5` channel on [TBD Discord](https://discord.com/invite/TBD).
 
 ## UnhandledSchemeError: Reading from "node:crypto" is not handled by plugins (Unhandled scheme)
 
