--- a/site/docs/web5/troubleshooting/next.mdx
+++ b/site/docs/web5/troubleshooting/next.mdx
@@ -6,6 +6,8 @@ sidebar_position: 3
 
 This guide will walk you through the process of setting up the Web5 SDK in a Next.js project. You can integrate Web5 into an existing project or start a new one.
 
+If the suggested steps here don't work, please [open an issue](https://github.com/TBD54566975/developer.tbd.website/issues) or post your questions in the `#web5` channel on [TBD Discord](https://discord.com/invite/TBD).
+
 ## Create your project
 To start a new Next.js project, use the following commands in your terminal:
 
