fixing Create a DID install snippet

--- a/site/docs/tbdex/pfi/onboarding.mdx
+++ b/site/docs/tbdex/pfi/onboarding.mdx
@@ -34,8 +34,7 @@ To create a DID and identify yourself as a PFI, use the `web5/dids` package:
 
 ### Create DID with Service Endpoint
 
-<Shnip snippets={
-  [
+<Shnip snippets={[
     { snippetContent: pfiOnboardingCreateDidJs, language: 'JavaScript'},
     { snippetContent: pfiOnboardingCreateDidKt, language: 'Kotlin'}
   ]} />
