--- a/site/docs/tbdex/issuer/vc-issuance.mdx
+++ b/site/docs/tbdex/issuer/vc-issuance.mdx
@@ -55,7 +55,7 @@ If you don't already have one, you'll need to [create a DID](/docs/web5/build/de
 
 ### Create API Service
 
-1. Create a file to serve as your API's entry point (e.g. `main.js`), this is the `entry point` file that was created during the Express setup.
+1. Ensure you have a file, such as `main.js`, to act as your API's entry point, which was created during the Express setup.
 
 2. Within the file, import the following:
 
