--- a/site/docs/tbdex/pfi/required-sdks.mdx
+++ b/site/docs/tbdex/pfi/required-sdks.mdx
@@ -49,15 +49,13 @@ To send and receive tbDEX messages, import the following classes:
   ]}
   inlineSnippets={[
     {
-      code: `
-    import tbdex.sdk.httpserver.TbdexHttpServer
-    import tbdex.sdk.httpserver.models.SubmitKind
-    import tbdex.sdk.protocol.models.Rfq
-    import tbdex.sdk.protocol.models.Quote
-    import tbdex.sdk.protocol.models.Order
-    import tbdex.sdk.protocol.models.OrderStatus
-    import tbdex.sdk.protocol.models.Close
-      `,
+      code: `      import tbdex.sdk.httpserver.TbdexHttpServer
+      import tbdex.sdk.httpserver.models.SubmitKind
+      import tbdex.sdk.protocol.models.Rfq
+      import tbdex.sdk.protocol.models.Quote
+      import tbdex.sdk.protocol.models.Order
+      import tbdex.sdk.protocol.models.OrderStatus
+      import tbdex.sdk.protocol.models.Close`,
       language: 'Kotlin',
     },
   ]}
