--- a/site/docs/tbdex/wallet/receive-quote.mdx
+++ b/site/docs/tbdex/wallet/receive-quote.mdx
@@ -19,7 +19,7 @@ This message will be written to the exchange.
 
 ## Polling for Quote
 
-To get the Quote message, your application will poll the exchange until the Quote message is written:
+If you did not provide a [callback URI](/docs/tbdex/wallet/send-rfq#send-rfq-to-pfi) when sending a RFQ, your application will need to poll the exchange until the Quote message is written:
 
 <Shnip
   snippets={[
