--- a/site/docs/tbdex/wallet/send-rfq.mdx
+++ b/site/docs/tbdex/wallet/send-rfq.mdx
@@ -84,12 +84,12 @@ Use `TbdexHttpClient` to send the RFQ to the PFI, with an optional `replyTo` pro
 />
 
 :::tip Callback
-Callbacks are implemented via the `replyTo` property on the RFQ message, and is a fully qualified URI which could either be a DID or URL.
+Callbacks are fully qualified URIs (DID or URL) that can be provided to the PFI via the `replyTo` property on the RFQ message.
 
 If `replyTo` is provided, the PFI will send all new messages of the exchange to the supplied URI. 
 This URI is scoped to each exchange, allowing you to specify a different URI per exchange if desired. 
 
-If `replyTo` is _not_ present, you will have to poll the PFI to receive new messages within the exchange.
+If `replyTo` is _not_ present, you will need to poll the PFI to receive new messages within the exchange.
 :::
 
 If no error is thrown, the RFQ has been successfully sent to the PFI and an **exchange** has been created.
