--- a/site/docs/tbdex/pfi/creating-offerings.mdx
+++ b/site/docs/tbdex/pfi/creating-offerings.mdx
@@ -118,15 +118,17 @@ Note that while `type` and `description` fields are more intuitive and standard 
 
 ### Required Claims
 
-In order to comply with certain financial regulations, you may require information about the customer you are transacting with. You can obtain this information via [Verifiable Credentials](/docs/web5/learn/verifiable-credentials). 
+In order to comply with certain financial regulations, you may require information about the customer you are transacting with. 
+You can obtain this information via [Verifiable Credentials](/docs/web5/learn/verifiable-credentials). 
 
-To specify the exact credentials you need, you can do so in the `requiredClaims` section of your Offering by following [the DIF Presentation Definition](https://identity.foundation/presentation-exchange/#presentation-definition). You'll specify all required forms and details of proof, optional selection rules, and define flexibility where possible when different types of input may satisfy the requirements.
+To specify the exact credentials you need, you can do so in the `requiredClaims` section of your Offering by following [creating a Presentation Definition](/docs/web5/build/verifiable-credentials/presentation-definition/). 
+You'll specify all required forms and details of proof, optional selection rules, and define flexibility where possible when different types of input may satisfy the requirements.
 
-For a full breakdown of all the available fields and combinations, [see the DIF website](https://identity.foundation/presentation-exchange/#presentation-definition) for details. Below is a example of how you could request a Wallet provide a VC of type **SanctionsCredential**:
+For a full breakdown of all the available fields and combinations, [see the DIF website](https://identity.foundation/presentation-exchange/#presentation-definition) for details. 
+Below is a example of how you could request a Wallet provide a VC of type **SanctionsCredential**:
 
 ```json
 {
-  "comment": "Note: VP, OIDC, DIDComm, or CHAPI outer wrapper would be here.",
   "presentation_definition": {
     "id": "6bdaec32-e511-489d-b2fd-27a051bd819b",
     "input_descriptors": [
@@ -149,6 +151,8 @@ For a full breakdown of all the available fields and combinations, [see the DIF 
   }
 }
 ```
+
+Once you've created your required claims, it's important to [validate them](/docs/web5/build/verifiable-credentials/presentation-definition/#validate-the-presentation-definition) to ensure there are no errors in the design.
 
 ## Sample Offering
 
